--- a/bin/src/bbytheme.css
+++ b/bin/src/bbytheme.css
@@ -51,3 +51,139 @@ switch:checked {
     background-color: #3669c9;
     transition: background-color 0.2 0.0;
 }
+
+
+/* .container {
+  width: 100%;
+  height: 50%;
+  background-color: gray;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 20px;
+} */
+
+.one {
+    left: 200px;
+    top: 200px;
+    width: 100px;
+    /* flex-basis: 200px; */
+    height: 30px;
+    border-radius: 10px;
+    /* outer-shadow: 10px 10px 5px #20000000; */
+    inner-shadow: 0.5px 0.5px 2px #FF0000;
+    text-justify: center;
+    /* background-color: red; */
+    /* max-width: 100px; */
+    /* flex-grow: 1.0; */
+    /* margin: 10px; */
+    /* padding: 10px;
+    border-color: black;
+    border-width: 0px;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 20px; */
+}
+
+.two {
+    width: 50px;
+    height: 50px;
+    /* margin: 20px; */
+    /* flex-grow: 1.0; */
+    /* max-width: 100px; */
+    /* max-height: 50px; */
+    background-color: green;
+    flex-direction: column;
+    /* padding: 10px; */
+    /* border-color: black; */
+    /* border-width: 10px; */
+}
+
+.three {
+    /* flex-basis: 30px; */
+    /* left: 80px; */
+    /* top: 50px; */
+    width: 200px;
+    height: 200px;
+    /* flex-grow: 1.0; */
+    /* min-width: 80px; */
+    /* max-height: 50px; */
+    /* flex-grow: 2.0; */
+    /* max-width: 100px; */
+    /* width: 300px; */
+    background-color: blue;
+}
+
+.four {
+    width: 300px;
+    height: 300px;
+    background-color: yellow;
+    /* flex-basis: 2px;
+    margin-top: 10px;
+    margin-bottom: 10px; */
+}
+
+.five {
+    background-color: red;
+}
+
+.six {
+    height: 30px;
+    width: 30px;
+    background-color: #808080;
+}
+
+.test {
+    flex-grow: 1.0;
+    height: 50px;
+    background-color: red;
+}
+
+.test2 {
+    flex-basis: 30px;
+    flex-grow: 2.0;
+    height: 50px;
+    background-color: green;
+}
+
+dropdown {
+    height: 30px;
+    color: black;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 3;
+    text-justify: center;
+}
+
+dropdown label {
+    color: black;
+    text-justify: center;
+}
+
+dropdown .icon {
+    text-justify: center;
+    color: #ff5e1a;
+    width: 20px;
+}
+
+dropdown>.container {
+    top: 100%;
+    background-color: white;
+    border-color: black;
+    border-width: 1px;
+}
+
+dropdown>.container>.item {
+    height: 30px;
+    width: 100px;
+    color: black;
+    /* padding-left: 10px; */
+    background-color: white;
+    transition: background-color 0.1 0.0;
+}
+
+dropdown>.container>.item:hover {
+    color: white;
+    background-color: #ff5e1a;
+    transition: background-color 0.1 0.0;
+}
